# pyPASreporterGUI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: BUILD.md  EXTENSIONS.md  INSTALL.md  RELEASE.md  TROUBLESHOOTING.md  VERIFY.md  VERSION_MATRIX.md
scripts/: build_all.py  test_all.py  validate_linux.sh
src/pypasreportergui/: __init__.py  cli.py  runtime.py
src/pypasreportergui/branding/: __init__.py  blueprint.py
tests/: __init__.py  test_core.py
tools/: build_exe.ps1  build_exe.sh  build_exe.spec  build_superset.py  build_wheels.py  detect_support.py  pin_superset.py  prereqs.ps1  prereqs.sh  pyi_rth_metadata.py  run_app.py  verify.py
