[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyPASreporterGUI"
version = "0.1.0"
description = "A branded, standalone Superset-based data analytics GUI with DuckDB support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "pyPASreporterGUI Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["superset", "analytics", "visualization", "duckdb", "dashboard"]
dependencies = [
    "apache-superset>=4.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "duckdb>=0.10.0",
    "duckdb-engine>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.28.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
pypasreportergui = "pypasreportergui.cli:app"

[project.urls]
Homepage = "https://github.com/yourorg/pyPASreporterGUI"
Repository = "https://github.com/yourorg/pyPASreporterGUI"
Documentation = "https://github.com/yourorg/pyPASreporterGUI/blob/main/docs/INSTALL.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pypasreportergui"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
